dashdemux/mpdparser: Fix wrong false sanity check for manifests with nested SegmentTemplate nodes

https://bugzilla.gnome.org/show_bug.cgi?id=778237